--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/chat.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/chat.html
@@ -227,13 +227,13 @@
         <!-- Sidebar -->
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
             <div class="app-brand demo" style="text-align: center;">
-                <a href="inicio.html" class="app-brand-link">
+                <a href="inicio_usuariofinal.html" class="app-brand-link">
                     <span class="app-brand-text demo menu-text fw-bolder">TelExpress</span>
                 </a>
             </div>
             <ul class="menu-inner py-1">
                 <li class="menu-item">
-                    <a href="inicio.html" class="menu-link">
+                    <a href="inicio_usuariofinal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-home-circle"></i>
                         <div>Inicio</div>
                     </a>
@@ -245,7 +245,7 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="tienda.html" class="menu-link">
+                    <a href="lista_productos.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-store"></i>
                         <div>Tienda</div>
                     </a>
@@ -269,7 +269,7 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="faq.html" class="menu-link">
+                    <a href="FAQs.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-question-mark"></i>
                         <div>Ayuda al cliente</div>
                     </a>
