--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/editar_orden.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/editar_orden.html
@@ -125,7 +125,7 @@
             </div>
 
             <div class="app-brand demo" style="text-align: center;">
-                <a href="inicio_superadmin.html" class="app-brand-link">
+                <a href="inicio_usuariofinal.html" class="app-brand-link">
                     <span class="app-brand-text demo menu-text fw-bolder" style="font-family: 'Poppins', sans-serif; color: #7367F0; padding-left: 15px;">TelExpress</span>
                 </a>
 
@@ -135,7 +135,7 @@
             </div>
             <ul class="menu-inner py-1">
                 <li class="menu-item">
-                    <a href="inicio.html" class="menu-link">
+                    <a href="inicio_usuariofinal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-home-circle"></i>
                         <div>Inicio</div>
                     </a>
@@ -147,7 +147,7 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="tienda.html" class="menu-link">
+                    <a href="lista_productos.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-store"></i>
                         <div>Tienda</div>
                     </a>
@@ -171,13 +171,13 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="faq.html" class="menu-link">
+                    <a href="FAQs.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-question-mark"></i>
                         <div>Ayuda al cliente</div>
                     </a>
                     <ul class="menu-sub">
                         <li class="menu-item">
-                            <a href="faqs.html" class="menu-link">
+                            <a href="FAQs.html" class="menu-link">
                                 <div>* FAQs</div>
                             </a>
                         </li>
