--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_productos.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_productos.html
@@ -171,7 +171,7 @@
 
                 <li class="menu-item ruedita" >
                     <a
-                            href="inicio_coordinador_zonal.html"
+                            href="inicio_usuariofinal.html"
                             target="_blank"
                             class="menu-link"
                     >
