--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_pedidos.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_pedidos.html
@@ -168,7 +168,7 @@
                     </a>
                 </li>
                 <li class="menu-item active">
-                    <a href="mis_pedidos.html" class="menu-link">
+                    <a href="lista_pedidos.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-list-ul"></i>
                         <div>Mis pedidos</div>
                     </a>
@@ -198,9 +198,39 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="FAQs.html" class="menu-link">
-                        <i class="menu-icon tf-icons bx bx-question-mark"></i>
-                        <div>F&Q</div>
+                    <a href="javascript:void(0);" class="menu-link menu-toggle">
+                        <i class="menu-icon tf-icons bx bx-support"></i>
+                        <div data-i18n="Helptoclient">Ayuda al cliente</div>
+                    </a>
+
+                    <ul class="menu-sub">
+                        <li class="menu-item">
+                            <a href="FAQs.html" class="menu-link">
+                                <div data-i18n="faqs">FAQs</div>
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="resenas.html" class="menu-link">
+                                <div data-i18n="Reseñas">Reseñas</div>
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="foro.html" class="menu-link">
+                                <div data-i18n="Foro">Foro</div>
+                            </a>
+                        </li>
+
+                    </ul>
+                </li>
+
+                <li class="menu-item ruedita" >
+                    <a
+                            href="inicio_coordinador_zonal.html"
+                            target="_blank"
+                            class="menu-link"
+                    >
+                        <i class="menu-icon tf-icons bx bx-cog"></i>
+                        <div data-i18n="Ajustes ">Ajustes</div>
                     </a>
                 </li>
             </ul>
