--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/enviar_resena.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/enviar_resena.html
@@ -112,25 +112,25 @@
         <!-- Sidebar -->
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
             <div class="app-brand demo" style="text-align: center;">
-                <a href="inicio.html" class="app-brand-link">
+                <a href="inicio_usuariofinal.html" class="app-brand-link">
                     <span class="app-brand-text demo menu-text fw-bolder">TelExpress</span>
                 </a>
             </div>
             <ul class="menu-inner py-1">
                 <li class="menu-item">
-                    <a href="inicio.html" class="menu-link">
+                    <a href="inicio_ususariofinal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-home-circle"></i>
                         <div>Inicio</div>
                     </a>
                 </li>
                 <li class="menu-item active">
-                    <a href="mis_pedidos.html" class="menu-link">
+                    <a href="lista_pedidos.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-list-ul"></i>
                         <div>Mis pedidos</div>
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="tienda.html" class="menu-link">
+                    <a href="lista_productos.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-store"></i>
                         <div>Tienda</div>
                     </a>
@@ -154,7 +154,7 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="faq.html" class="menu-link">
+                    <a href="javascript:void(0);" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-question-mark"></i>
                         <div>Ayuda al cliente</div>
                     </a>
@@ -333,20 +333,20 @@
                     </div>
 
                     <!-- Review Form -->
-                    <div class="review-form">
+                    <div class="review-form card">
                         <h5>Ingrese la foto del producto recibido</h5>
                         <div class="file-upload">
                             <input type="file" id="file-input">
                             <label for="file-input">Subir</label>
                         </div>
 
-                        <h5>El producto es de buena calidad?</h5>
+                        <h5 class="mt-4">El producto es de buena calidad?</h5>
                         <textarea rows="3"></textarea>
 
-                        <h5>Recibió rápido su producto?</h5>
+                        <h5 class="mt-4">Recibió rápido su producto?</h5>
                         <textarea rows="3"></textarea>
 
-                        <h5>Qué tan conforme está con la atención del agente? (Nombre del agente)</h5>
+                        <h5 class="mt-4">Qué tan conforme está con la atención del agente? (Nombre del agente)</h5>
                         <!-- Star Rating -->
                         <div class="star-rating">
                             <i class="bx bxs-star" data-value="1"></i>
@@ -360,7 +360,7 @@
                         <div style="margin-top: 20px;">
                             <button class="btn-cancel">CANCELAR</button>
                             <!-- The "ENVIAR" button as a link to 'resena_enviada.html' -->
-                            <a href="resena_enviada.html" class="btn-submit">ENVIAR</a>
+                            <a href="resenia.html" class="btn-submit">ENVIAR</a>
                         </div>
                     </div>
                 </div>
