--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_productos.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_productos.html
@@ -112,7 +112,7 @@
                         <div data-i18n="Start">Mis Pedidos</div>
                     </a>
                 </li>
-
+s
                 <li class="menu-item active">
                     <a href="lista_productos.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-store"></i>
@@ -151,12 +151,12 @@
       
                     <ul class="menu-sub">
                       <li class="menu-item">
-                        <a href="FAQs.html" class="menu-link">
+                        <a href="FAQS.html" class="menu-link">
                           <div data-i18n="faqs">FAQs</div>
                         </a>
                       </li>
                       <li class="menu-item">
-                        <a href="resenas.html" class="menu-link">
+                        <a href="resenia.html" class="menu-link">
                           <div data-i18n="Reseñas">Reseñas</div>
                         </a>
                       </li>
