--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/Foro.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/Foro.html
@@ -140,23 +140,23 @@
                   </a>
               </li>
       
-              <li class="menu-item">
+              <li class="menu-item active">
                   <a href="javascript:void(0);" class="menu-link menu-toggle">
                     <i class="menu-icon tf-icons bx bx-support"></i>
                     <div data-i18n="Ayuda">Ayuda al cliente</div>
                   </a>
                   <ul class="menu-sub">
                     <li class="menu-item">
-                      <a href="FAQs.html" class="menu-link">
+                      <a href="FAQS.html" class="menu-link">
                         <div data-i18n="Faqs">FAQs</div>
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="resenas.html" class="menu-link">
+                      <a href="resenia.html" class="menu-link">
                         <div data-i18n="Reseñas">Reseñas</div>
                       </a>
                     </li>
-                    <li class="menu-item">
+                    <li class="menu-item active">
                       <a href="foro.html" class="menu-link">
                         <div data-i18n="Foro">Foro</div>
                       </a>
