--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/enviar_resena.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/enviar_resena.html
@@ -348,20 +348,20 @@
                     </div>
 
                     <!-- Review Form -->
-                    <div class="review-form">
+                    <div class="review-form card">
                         <h5>Ingrese la foto del producto recibido</h5>
                         <div class="file-upload">
                             <input type="file" id="file-input">
                             <label for="file-input">Subir</label>
                         </div>
 
-                        <h5>El producto es de buena calidad?</h5>
+                        <h5 style="margin-top:1rem;">El producto es de buena calidad?</h5>
                         <textarea rows="3"></textarea>
 
-                        <h5>Recibió rápido su producto?</h5>
+                        <h5 style="margin-top:1rem;">Recibió rápido su producto?</h5>
                         <textarea rows="3"></textarea>
 
-                        <h5>Qué tan conforme está con la atención del agente? (Nombre del agente)</h5>
+                        <h5 style="margin-top:1rem;">Qué tan conforme está con la atención del agente? (Nombre del agente)</h5>
                         <!-- Star Rating -->
                         <div class="star-rating">
                             <i class="bx bxs-star" data-value="1"></i>
@@ -375,7 +375,7 @@
                         <div style="margin-top: 20px;">
                             <button class="btn-cancel">CANCELAR</button>
                             <!-- The "ENVIAR" button as a link to 'resena_enviada.html' -->
-                            <a href="resena_enviada.html" class="btn-submit">ENVIAR</a>
+                            <a href="resenia.html" class="btn-submit">ENVIAR</a>
                         </div>
                     </div>
                 </div>
