--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/editar_orden.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/editar_orden.html
@@ -392,7 +392,7 @@
                         <div class="communication-section justify-content-between ">
                             <div style="margin-left: 2rem;">
                                 <p>Comunicarse con un agente:</p>
-                                <i class="bx bx-chat" style="font-size: 24px; cursor: pointer;"></i>
+                                <i class="bx bx-chat" style="font-size: 24px; cursor: pointer;" onclick="window.location.href='chat.html';"></i>
                             </div>
                             <div style="margin-right: 1rem;">
                                 <button class="btn-delete">Eliminar</button>
