--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/inicio_usuariofinal.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/inicio_usuariofinal.html
@@ -133,12 +133,12 @@
             </a>
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="FAQs.html" class="menu-link">
+                <a href="FAQS.html" class="menu-link">
                   <div data-i18n="Faqs">FAQs</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="resenas.html" class="menu-link">
+                <a href="resenia.html" class="menu-link">
                   <div data-i18n="Reseñas">Reseñas</div>
                 </a>
               </li>
