--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_productos.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_productos.html
@@ -635,7 +635,7 @@ s
 						<!-- /store products -->
 
 						<!-- store bottom filter -->
-						<div class="store-filter card-footer" style="margin-bottom:0.5rem">
+						<div class="store-filter card-footer" style="margin-bottom:1rem">
 							
 							<ul class="store-pagination">
 								<li class="active">1</li>
@@ -736,7 +736,7 @@ s
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger">Eliminar</button>
-                <button type="button" class="btn btn-primary">Importar</button>
+                <button type="button" class="btn btn-primary" onclick="window.location.href='pagar.html';">Importar</button>
                 
             </div>
         </div>
