--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/pago.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/pago.html
@@ -458,7 +458,7 @@
                       
                         <!-- Botón para pagar los pagos pendientes -->
                         <div class="text-end mt-3">
-                          <button type="button" class="btn btn-primary">Pagar compras pendientes(0 seleccionados)</button>
+                          <button type="button" class="btn btn-primary" onclick="window.location.href='pagar.html';">Pagar compras pendientes(0 seleccionados)</button>
                         </div>
                         <!-- Paginación -->
                         <div class="d-flex justify-content-end mt-4">
