"Arreglados algunos enlaces"

--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/FAQS.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/FAQS.html
@@ -135,7 +135,7 @@
             </a>
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="FAQs.html" class="menu-link">
+                <a href="FAQS.html" class="menu-link">
                   <div data-i18n="Faqs">FAQs</div>
                 </a>
               </li>
@@ -273,13 +273,13 @@
                   <div class="dropdown-divider"></div>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="cambio_contra_agente.html">
+                  <a class="dropdown-item" href="../Sistema/cambio_contraseña.html">
                     <i class="bx bx-user me-2"></i>
                     <span class="align-middle">Cambio de Contraseña</span>
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="ajustes_superadmin.html">
+                  <a class="dropdown-item" href="ajustes.html">
                     <i class="bx bx-cog me-2"></i>
                     <span class="align-middle">Ajustes</span>
                   </a>
