--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/inicio_usuariofinal.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/inicio_usuariofinal.html
@@ -143,7 +143,7 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="foro.html" class="menu-link">
+                <a href="Foro.html" class="menu-link">
                   <div data-i18n="Foro">Foro</div>
                 </a>
               </li>
@@ -271,13 +271,13 @@
                   <div class="dropdown-divider"></div>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="cambio_contra_agente.html">
+                  <a class="dropdown-item" href="../Sistema/cambio_contraseña.html">
                     <i class="bx bx-user me-2"></i>
                     <span class="align-middle">Cambio de Contraseña</span>
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="ajustes_superadmin.html">
+                  <a class="dropdown-item" href="ajustes.html">
                     <i class="bx bx-cog me-2"></i>
                     <span class="align-middle">Ajustes</span>
                   </a>
