--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/importacion_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/importacion_zonal.html
@@ -130,7 +130,7 @@
 
                 </li>
                 <li class="menu-item active">
-                    <a href="importacio_zonal.html" class="menu-link">
+                    <a href="importacion_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-import"></i>
                         <div data-i18n="Importaciones">Importaciones</div>
                     </a>
@@ -293,7 +293,7 @@
                                     <div class="dropdown-divider"></div>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="auth-login-basic.html">
+                                    <a class="dropdown-item" href="../Sistema/Login.html">
                                         <i class="bx bx-power-off me-2"></i>
                                         <span class="align-middle">Log Out</span>
                                     </a>
