--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/Foro.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/Foro.html
@@ -157,7 +157,7 @@
                       </a>
                     </li>
                     <li class="menu-item active">
-                      <a href="foro.html" class="menu-link">
+                      <a href="Foro.html" class="menu-link">
                         <div data-i18n="Foro">Foro</div>
                       </a>
                     </li>
@@ -328,7 +328,7 @@
                                     <div class="dropdown-divider"></div>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="auth-login-basic.html">
+                                    <a class="dropdown-item" href="../Sistema/Login.html">
                                         <i class="bx bx-power-off me-2"></i>
                                         <span class="align-middle">Log Out</span>
                                     </a>
