--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/editar_orden.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/editar_orden.html
@@ -141,7 +141,7 @@
                     </a>
                 </li>
                 <li class="menu-item active">
-                    <a href="mis_pedidos.html" class="menu-link">
+                    <a href="lista_pedidos.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-list-ul"></i>
                         <div>Mis pedidos</div>
                     </a>
@@ -171,18 +171,18 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="FAQs.html" class="menu-link">
+                    <a href="FAQS.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-question-mark"></i>
                         <div>Ayuda al cliente</div>
                     </a>
                     <ul class="menu-sub">
                         <li class="menu-item">
-                            <a href="FAQs.html" class="menu-link">
+                            <a href="FAQS.html" class="menu-link">
                                 <div>* FAQs</div>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="resenas.html" class="menu-link">
+                            <a href="resenia.html" class="menu-link">
                                 <div>* Reseñas</div>
                             </a>
                         </li>
@@ -307,13 +307,13 @@
                                     <div class="dropdown-divider"></div>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="cambio_contra_agente.html">
+                                    <a class="dropdown-item" href="../Sistema/cambio_contraseña.html">
                                         <i class="bx bx-user me-2"></i>
                                         <span class="align-middle">Cambio de Contraseña</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="ajustes_superadmin.html">
+                                    <a class="dropdown-item" href="ajustes.html">
                                         <i class="bx bx-cog me-2"></i>
                                         <span class="align-middle">Ajustes</span>
                                     </a>
