--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_pedidos.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_pedidos.html
@@ -205,17 +205,17 @@
 
                     <ul class="menu-sub">
                         <li class="menu-item">
-                            <a href="FAQs.html" class="menu-link">
+                            <a href="FAQS.html" class="menu-link">
                                 <div data-i18n="faqs">FAQs</div>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="resenas.html" class="menu-link">
+                            <a href="resenia.html" class="menu-link">
                                 <div data-i18n="Reseñas">Reseñas</div>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="foro.html" class="menu-link">
+                            <a href="Foro.html" class="menu-link">
                                 <div data-i18n="Foro">Foro</div>
                             </a>
                         </li>
@@ -354,13 +354,13 @@
                                     <div class="dropdown-divider"></div>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="cambio_contra_agente.html">
+                                    <a class="dropdown-item" href="../Sistema/cambio_contraseña.html">
                                         <i class="bx bx-user me-2"></i>
                                         <span class="align-middle">Cambio de Contraseña</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="ajustes_superadmin.html">
+                                    <a class="dropdown-item" href="ajustes.html">
                                         <i class="bx bx-cog me-2"></i>
                                         <span class="align-middle">Ajustes</span>
                                     </a>
