--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_productos.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_productos.html
@@ -161,7 +161,7 @@ s
                         </a>
                       </li>
                       <li class="menu-item">
-                        <a href="foro.html" class="menu-link">
+                        <a href="Foro.html" class="menu-link">
                           <div data-i18n="Foro">Foro</div>
                         </a>
                       </li>
@@ -320,7 +320,7 @@ s
                                     <div class="dropdown-divider"></div>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="auth-login-basic.html">
+                                    <a class="dropdown-item" href="../Sistema/Login.html">
                                         <i class="bx bx-power-off me-2"></i>
                                         <span class="align-middle">Log Out</span>
                                     </a>
