"Arreglados algunos enlaces más+"

--- a/GRUPO2-GTICS/src/main/resources/static/sneat-1.0.0/html/Agente/primer_inicio.html
+++ b/GRUPO2-GTICS/src/main/resources/static/sneat-1.0.0/html/Agente/primer_inicio.html
@@ -90,7 +90,7 @@
               <img src="logo.png" alt="Logo" style="width: 250px; display: block; margin: -70px auto -90px auto;" />
               <div class="app-brand justify-content-center">
                 <!--imagen de logo-->
-                <a href="index.html" class="app-brand-link gap-2">
+                <a href="inicio_agente.html" class="app-brand-link gap-2">
                   <h1 style="color: #696CFF; font-family: 'Poppins', sans-serif; font-size: 3rem; text-align: center; margin-bottom: 2px;">
                     TelExpress
                   </h1>
@@ -100,7 +100,7 @@
               <h4 class="mb-2" style="font-family: Zilla Slab">Bienvenido a TelExpress! </h4>
               <p class="mb-4" style="font-family: Zilla Slab, sans-serif;">Completa los datos de manera obligatoria para continuar</p>
 
-              <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
+              <form id="formAuthentication" class="mb-3" action="inicio_agente.html" method="POST">
                 <div class="mb-3">
                   <label for="email" class="form-label">CÓDIGO DE DESPACHADOR</label>
                   <input
