--- a/GRUPO2-GTICS/src/main/resources/static/sneat-1.0.0/html/Agente/chat_agente.html
+++ b/GRUPO2-GTICS/src/main/resources/static/sneat-1.0.0/html/Agente/chat_agente.html
@@ -340,7 +340,7 @@
                 </li>
 
                 <li class="menu-item">
-                    <a href="inventario_superadmin.html" class="menu-link">
+                    <a href="usuarios_baneados.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-block"></i>
                         <div data-i18n="UsuariosBaneados">Usuarios baneados</div>
                     </a>
@@ -471,12 +471,7 @@
                                         <span class="align-middle">Cambio de Contraseña</span>
                                     </a>
                                 </li>
-                                <li>
-                                    <a class="dropdown-item" href="ajustes_superadmin.html">
-                                        <i class="bx bx-cog me-2"></i>
-                                        <span class="align-middle">Ajustes</span>
-                                    </a>
-                                </li>
+
 
                                 <li>
                                     <div class="dropdown-divider"></div>
