--- a/GRUPO2-GTICS/src/main/resources/static/sneat-1.0.0/html/Usuariofinal/FAQS.html
+++ b/GRUPO2-GTICS/src/main/resources/static/sneat-1.0.0/html/Usuariofinal/FAQS.html
@@ -145,7 +145,7 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="foro.html" class="menu-link">
+                <a href="Foro.html" class="menu-link">
                   <div data-i18n="Foro">Foro</div>
                 </a>
               </li>
@@ -278,12 +278,7 @@
                     <span class="align-middle">Cambio de Contraseña</span>
                   </a>
                 </li>
-                <li>
-                  <a class="dropdown-item" href="ajustes.html">
-                    <i class="bx bx-cog me-2"></i>
-                    <span class="align-middle">Ajustes</span>
-                  </a>
-                </li>
+
 
                 <li>
                   <div class="dropdown-divider"></div>
