--- a/GRUPO2-GTICS/src/main/resources/static/sneat-1.0.0/html/Usuariofinal/pagar.html
+++ b/GRUPO2-GTICS/src/main/resources/static/sneat-1.0.0/html/Usuariofinal/pagar.html
@@ -155,7 +155,7 @@
 
                 <!-- Zona de pagos pendientes -->
                 <li class="menu-item active">
-                    <a href="javascript:void(0);" class="menu-link" >
+                    <a href="pago.html" class="menu-link" >
                         <i class="menu-icon tf-icons bx  bx-credit-card"></i>
                         <div data-i18n="Dashboard">Pago</div>
                     </a>
@@ -171,7 +171,7 @@
 
                 <!-- cambiar a agente -->
                 <li class="menu-item">
-                    <a href="javascript:void(0);" class="menu-link">
+                    <a href="unete.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-import"></i>
                         <div data-i18n="Importaciones">Únete al team</div>
                     </a>
@@ -190,12 +190,12 @@
                         </a>
                       </li>
                       <li class="menu-item">
-                        <a href="javascript:void(0);" class="menu-link">
+                        <a href="resenia.html" class="menu-link">
                           <div data-i18n="resenias">Reseñas</div>
                         </a>
                       </li>
                       <li class="menu-item">
-                        <a href="javascript:void(0);" class="menu-link">
+                        <a href="Foro.html" class="menu-link">
                           <div data-i18n="foro">Foro</div>
                         </a>
                       </li>
