--- a/GRUPO2-GTICS/src/main/resources/static/sneat-1.0.0/html/Usuariofinal/resenia.html
+++ b/GRUPO2-GTICS/src/main/resources/static/sneat-1.0.0/html/Usuariofinal/resenia.html
@@ -416,9 +416,9 @@
 
                                           <hr class="m-0">
                                           <div class="row">
-                                            <p style="color:#2d56ad">
-                                                <u>12 respuestas</u>
-                                            </p>
+                                              <p style="color:#2d56ad">
+                                              <a href="respuesta_resenia.html" style="text-decoration: underline; color: inherit;">12 respuestas</a>
+                                              </p>
                                           </div>
                                         </div>
                                       </div>
@@ -430,16 +430,16 @@
 
                             <div class="row"></div>
                                 <!-- Blockquote -->
-                                <div class="accordion mt-3" id="accordionExample">
+                                <div class="accordion mt-3" id="accordionExample2">
                                     <div class="card accordion-item active">
-                                      <h2 class="accordion-header" id="headingOne">
+                                      <h2 class="accordion-header" id="headingtwo">
                                         <button
                                           type="button"
                                           class="accordion-button"
                                           data-bs-toggle="collapse"
-                                          data-bs-target="#accordionOne"
+                                          data-bs-target="#accordiontwo"
                                           aria-expanded="true"
-                                          aria-controls="accordionOne"
+                                          aria-controls="accordiontwo"
                                         >
                                           Reseña 2
                                         </button>
@@ -447,9 +447,9 @@
 
                 
                                       <div
-                                        id="accordionOne"
+                                        id="accordiontwo"
                                         class="accordion-collapse collapse show"
-                                        data-bs-parent="#accordionExample"
+                                        data-bs-parent="#accordionExample2"
                                       >
                                         <div class="accordion-body">
                                             <div class="row">
@@ -474,7 +474,7 @@
                                           <hr class="m-0">
                                           <div class="row">
                                             <p style="color:#2d56ad">
-                                                <u>15 respuestas</u>
+                                                <a href="respuesta_resenia.html" style="text-decoration: underline; color: inherit;">12 respuestas</a>
                                             </p>
                                           </div>
                                         </div>
