--- a/GRUPO2-GTICS/src/main/resources/static/sneat-1.0.0/html/Usuariofinal/respuesta_resenia.html
+++ b/GRUPO2-GTICS/src/main/resources/static/sneat-1.0.0/html/Usuariofinal/respuesta_resenia.html
@@ -77,7 +77,7 @@
           <span class="app-brand-text demo menu-text fw-bolder" style="font-family: 'Poppins', sans-serif; color: #7367F0; padding-left: 15px;">TelExpress</span>
         </a>
 
-        <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
+        <a href="inicio_usuariofinal.html" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
           <i class="bx bx-chevron-left bx-sm align-middle"></i>
         </a>
       </div>
